--- a/lib/www/index.html
+++ b/lib/www/index.html
@@ -31,7 +31,7 @@ if (id) {
         .done( function(data) {
 	    new QRCode(document.getElementById("qrcode"), data.URI);
             $("<p />").text(data.memo).appendTo($("p#reason"));
-            $("<p />").text(data.amount/100000000 + "BTC").appendTo($("p#amount"));
+            $("<p />").text(data.amount/100000000 + "DASH").appendTo($("p#amount"));
 	    $("a").attr("href", data.URI);
             $("<p />").text("Powered by Electrum").appendTo($("p#powered"));
 	    $(function () {
@@ -91,7 +91,7 @@ $(document).on('click', 'a[href^="dash:"]', function (e) {
             <p id="reason"></p>
             <p id="amount"></p>
 	    <div style="background-color:#7777aa; border-radius: 5px; padding:10px;">
-		<a style="color:#ffffff; text-decoration:none;" id="paylink" target="_blank">Pay with Bitcoin</a>
+		<a style="color:#ffffff; text-decoration:none;" id="paylink" target="_blank">Pay with Dash</a>
 	    </div>
 	    <br/>
 	    <div id="qrcode" align="center"></div>
