--- a/lib/www/index.html
+++ b/lib/www/index.html
@@ -32,9 +32,9 @@ if (id) {
         .done( function(data) {
 	    new QRCode(document.getElementById("qrcode"), data.URI);
             $("<p />").text(data.memo).appendTo($("p#reason"));
-            $("<p />").text(data.amount/100000000 + "BTC").appendTo($("p#amount"));
+            $("<p />").text(data.amount/100000000 + "DASH").appendTo($("p#amount"));
 	    $("a").attr("href", data.URI);
-            $("<p />").text("Powered by Electrum").appendTo($("p#powered"));
+            $("<p />").text("Powered by Electrum-DASH").appendTo($("p#powered"));
             var websocket_server = data.websocket_server;
             var websocket_port = data.websocket_port;
 	    $(function () {
@@ -84,10 +84,10 @@ if (id) {
 };
 
 // See http://stackoverflow.com/questions/29186154/chrome-clicking-mailto-links-closes-websocket-connection
-$(document).on('click', 'a[href^="bitcoin:"]', function (e) {
+$(document).on('click', 'a[href^="dash:"]', function (e) {
     e.preventDefault();
-    var btcWindow = window.open($(e.currentTarget).attr('href'));
-    btcWindow.close();
+    var dashWindow = window.open($(e.currentTarget).attr('href'));
+    dashWindow.close();
     return false;
 });
 
@@ -99,7 +99,7 @@ $(document).on('click', 'a[href^="bitcoin:"]', function (e) {
             <p id="reason"></p>
             <p id="amount"></p>
 	    <div style="background-color:#7777aa; border-radius: 5px; padding:10px;">
-		<a style="color:#ffffff; text-decoration:none;" id="paylink" target="_blank">Pay with Bitcoin</a>
+		<a style="color:#ffffff; text-decoration:none;" id="paylink" target="_blank">Pay with Dash</a>
 	    </div>
 	    <br/>
 	    <div id="qrcode" align="center"></div>
